feat: adding actions menu
